# python-docs-mcp-server

./: .coderabbit.yaml  .dockerignore  .gitignore  .mcp.json  AGENT-EXECUTION-PIPELINE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPENCLAW-FORGE-PROTOCOL.md  PR9_MCP_TEST_PLAN.md  PR9_SMOKE_FAILURE_FIX_PLAN.md  README.md  SECURITY.md  STRATEGIC-ROADMAP-2026-05-29.md  glama.json  pyproject.toml  server.json
.github/: CODEOWNERS  INTEGRATION-TEST.md  RELEASE.md  TEST-STRATEGY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: autonomous-agent.yml
.github/PULL_REQUEST_TEMPLATE/: agent.md
.github/workflows/: ci.yml  codeql.yml  e2e.yml  release.yml  scorecard.yml  security.yml
.planning/: FULL-CODEBASE-REVIEW.md  POSITIONING.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.1.0-MILESTONE-AUDIT.md
.planning/agent-context/: adr-001-source-adapters.md  adr-006-serialization.md  cpython-source-sha-pin.md  pyyaml-safe-loader-audit.md  readme-glama-six-tool-refresh.md  (+1 more)
benchmarks/: __init__.py  __main__.py  corpus.py  model_matrix.py  report.py  runner.py  scoring.py
tests/: conftest.py  test_ci_workflows.py  test_compare_versions.py  test_compare_versions_spike.py  test_detection.py  test_doctor.py  test_ingestion.py  test_mcp_get_docs_cache_smoke.py  test_multi_version.py  test_package_docs.py  test_packaging.py  test_persistent_docs_cache.py  test_phase1_integration.py  test_publish.py  test_retrieval.py  test_retrieval_regression.py  test_schema.py  test_schema_snapshot.py  test_server.py  test_services.py  test_stability.py  test_stdio_hygiene.py  test_stdio_smoke.py  test_synonyms.py
(+200 files in other folders)
